# ZPriMATE

./: .gitignore  ISSUES  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  cscan  main.cpp  model.h  old_make  pheno.cpp  pheno.h  zprimate
Cuba-4.2/: configure  configure.ac  makefile
Cuba-4.2/src/suave/: Integrate.c
analyses/arXiv-1405.4123/limits/: limits_1  limits_12  limits_14  limits_15  limits_2  limits_21  limits_25  limits_30  limits_32  limits_33  limits_34  limits_36  limits_39  limits_4  limits_42  limits_43  limits_46  limits_51  limits_53  limits_55  limits_57  limits_59  limits_60
analyses/arXiv_1405_4123/el_lims/: limits_1  limits_10  limits_11  limits_12  limits_13  limits_14  limits_15  limits_16  limits_17  limits_18  limits_19  limits_2  limits_20  limits_21  limits_22  limits_23  limits_24  limits_25  limits_26  limits_27  limits_28  limits_29  limits_3  limits_30  limits_31  limits_32  limits_33  limits_34  limits_35  limits_36  limits_37  limits_38  limits_39  limits_4  limits_40  limits_41  limits_42  limits_43  limits_44  limits_45  (+20 more)
analyses/arXiv_1405_4123/mu_lims/: limits_10  limits_11  limits_13  limits_16  limits_17  limits_18  limits_19  limits_20  limits_22  limits_23  limits_24  limits_26  limits_27  limits_28  limits_29  limits_3  limits_31  limits_35  limits_37  limits_38  limits_40  limits_41  limits_44  limits_45  limits_47  limits_48  limits_49  limits_5  limits_50  limits_52  limits_54  limits_56  limits_58  limits_6  limits_7  limits_8  limits_9
example/: example.conf  kin_mix_limits  misc.py  plotBisection.py  plotLimits.py  settings  ssm_exclusion  test.py
m4/: python.m4
mstw/: mstwpdf.cc
src/: Makefile  Makefile.am  Makefile.in  calc_limit.py  cscan.cpp  excl_limit.py  input.cpp  input.h  main.cpp  model.cpp  model.h  pheno.cpp  pheno.h  plot_signal.py  read_config.cpp  read_config.h  spectrum_analysis.cpp  spectrum_analysis.h  test.cpp  xsec.cpp  xsec.h  zprimate.py
src/cubature/: Makefile.am  Makefile.in
test/: quicktest
